# maxima-mirror

./: ChangeLog
crosscompile-windows/: CMakeLists.txt  Makefile.am  nightlytest.sh
crosscompile-windows/mswebview/: CMakeLists.txt
crosscompile-windows/sbcl/: CMakeLists.txt
crosscompile-windows/wxmaxima/: CMakeLists.txt
crosscompile-windows/wxwidgets/: CMakeLists.txt
doc/info/: Makefile.am  Plotting.texi  Program.texi  common-lang.mk
doc/info/ru/: Arrays.texi  Constants.texi  Expressions.texi  Function.texi  Number.texi  Operators.texi  draw.texi  grobner.texi  untranslated-entries.texi
share/cobyla/: bf-cobyla-interface.lisp
share/cobyla/lisp/: bf-cobylb.lisp  bf-trstlp.lisp
share/contrib/integration/: abs_integrate.mac  rtest_abs_integrate.mac
share/descriptive/: descriptive.mac
share/draw/: gnuplot.lisp
share/ezunits/: ezunits_functions.mac
share/numeric/: decfp-core.lisp
share/orthopoly/: orthopoly.lisp  rtest_orthopoly.mac
src/: Makefile.am  cl-info.lisp  comm.lisp  compar.lisp  csimp2.lisp  defint.lisp  float.lisp  globals.lisp  hypgeo.lisp  init-cl.lisp  irinte.lisp  limit.lisp  macsys.lisp  maxima.asd  maxima.system  mload.lisp  nparse.lisp  plot.lisp  rat3c.lisp  rat3d.lisp  rat3e.lisp  risch.lisp  rpart.lisp  simp.lisp  sin.lisp  solve.lisp  trgred.lisp  trigi.lisp  trigo.lisp
tests/: rtest14.mac  rtest16.mac  rtest3.mac  rtest_hypgeo.mac  rtest_integrate.mac  rtest_limit.mac  rtest_limit_gruntz.mac  rtest_log.mac  rtest_numth.mac  rtest_sign.mac  rtest_trig.mac  rtestint.mac
